[package]
name = "hey_os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hey_os"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = "1.0.102"
bootloader = "0.9" # latest includs core by default... 
config = "0.15.24"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
